LS Text Overbleed Issue Fixed

--- a/public/app/app/styles/main.css
+++ b/public/app/app/styles/main.css
@@ -7683,7 +7683,7 @@ pre {
 }
 
 .sdkOpenSourceSection {
-  padding-left: 0;
+  padding-left: 5px;
 }
 
 #nav-wrapper > div {
